--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,43 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/src/fonts/Poppins-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  line-height: normal;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/src/fonts/Poppins-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  line-height: normal;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/src/fonts/Poppins-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  line-height: normal;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/src/fonts/Poppins-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  line-height: normal;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('/src/fonts/Poppins-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  line-height: normal;
+}
