--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,66 @@
   font-style: normal;
   line-height: normal;
 }
+
+.swiper-slide {
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+.swiper #custom-pagination {
+  color: #676767;
+}
+#custom-pagination .swiper-pagination-bullet {
+  background: #676767;
+}
+
+#custom-pagination .swiper-pagination-bullet-active {
+  background: #fc2121;
+}
+
+#app {
+  height: 100%;
+}
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+.swiper {
+  position: relative;
+  width: 373px;
+  height: 269px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+
+.swiper-slide img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+}
+
+.gradient-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 26.4%, #000 100%);
+  pointer-events: none;
+}
