--- a/src/index.css
+++ b/src/index.css
@@ -3,46 +3,46 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('/src/fonts/Poppins-Light.ttf') format('truetype');
+  font-family: "Poppins";
+  src: url("/src/fonts/Poppins-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
   line-height: normal;
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('/src/fonts/Poppins-Regular.ttf') format('truetype');
+  font-family: "Poppins";
+  src: url("/src/fonts/Poppins-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   line-height: normal;
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('/src/fonts/Poppins-Medium.ttf') format('truetype');
+  font-family: "Poppins";
+  src: url("/src/fonts/Poppins-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
   line-height: normal;
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('/src/fonts/Poppins-SemiBold.ttf') format('truetype');
+  font-family: "Poppins";
+  src: url("/src/fonts/Poppins-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
   line-height: normal;
 }
 
 @font-face {
-  font-family: 'Poppins';
-  src: url('/src/fonts/Poppins-Bold.ttf') format('truetype');
+  font-family: "Poppins";
+  src: url("/src/fonts/Poppins-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   line-height: normal;
 }
 
-.swiper-slide {
+.slider-container .swiper-slide {
   overflow: hidden;
   border-radius: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -76,13 +76,13 @@ body {
   padding: 0;
 }
 
-.swiper {
+.slider-container .swiper {
   position: relative;
   width: 373px;
   height: 269px;
 }
 
-.swiper-slide {
+.slider-container .swiper-slide {
   background-position: center;
   background-size: cover;
   width: 300px;
@@ -101,6 +101,11 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 26.4%, #000 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 26.4%,
+    #000 100%
+  );
   pointer-events: none;
 }
