--- a/src/index.css
+++ b/src/index.css
@@ -3,43 +3,46 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "Poppins";
-  src: url("/src/fonts/Poppins-Light.ttf") format("truetype");
+  font-family: 'Poppins';
+  src: url('/src/fonts/Poppins-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
   line-height: normal;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("/src/fonts/Poppins-Regular.ttf") format("truetype");
+  font-family: 'Poppins';
+  src: url('/src/fonts/Poppins-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   line-height: normal;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("/src/fonts/Poppins-Medium.ttf") format("truetype");
+  font-family: 'Poppins';
+  src: url('/src/fonts/Poppins-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
   line-height: normal;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("/src/fonts/Poppins-SemiBold.ttf") format("truetype");
+  font-family: 'Poppins';
+  src: url('/src/fonts/Poppins-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
   line-height: normal;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("/src/fonts/Poppins-Bold.ttf") format("truetype");
+  font-family: 'Poppins';
+  src: url('/src/fonts/Poppins-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
   line-height: normal;
+}
+#custom-pagination {
+  padding-top: 50px;
 }
 
 .slider-container .swiper-slide {
@@ -101,11 +104,6 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0) 26.4%,
-    #000 100%
-  );
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 26.4%, #000 100%);
   pointer-events: none;
 }
